:recycle: refactor: Removing getters and setter to use Lombok