@@ -5,8 +5,6 @@ import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.junit.MockitoJUnitRunner;
 
-import javax.validation.constraints.NotNull;
-
 @RunWith(MockitoJUnitRunner.class)
 public class ProductTest {
 
@@ -15,13 +13,15 @@ public class ProductTest {
         Long expectId = 1L;
         String expectedTitle = "A dummy title";
         String expectedDescription = "A dummy description";
-        Double expectedPrice = new Double("2.1");
+        // Ajustado por conta do método New Double por estar marcado como depreciado desde o Java 9
+        Double expectedPrice = Double.valueOf("2.1");
 
         Product product1 = new Product();
         product1.setId(1L);
         product1.setTitle("A dummy title");
         product1.setDescription("A dummy description");
-        product1.setPrice(new Double("2.1"));
+        // Ajustado por conta do método New Double por estar marcado como depreciado desde o Java 9
+        product1.setPrice(Double.valueOf("2.1"));
 
         Assert.assertEquals(expectId, product1.getId());
         Assert.assertEquals(expectedTitle, product1.getTitle());
